--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@mui/material": "^7.3.4",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.547.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^14.2.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
